Oct 05, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- removed quakeforge workaround
- added -Wall to CFLAGS

Oct 05, 2001: Jordi Mallach <jordi@sindominio.net>
- fixed a variable type in es.po which was making it segfault directly.
  Thanks, Ludwig.

Oct 03, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- initial descent3 support (requires qstat 2.4e)
- changed version to 0.9.7c (new master for descent3)
- added quakeforge workaround
- updated german translation
- fixed player filter dialog bug

Oct 01, 2001: Jordi Mallach <jordi@sindominio.net>
- updated Spanish translation, again :)

Oct 01, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- major redesign of settings dialog
- individually configurable nick for q1,qw,q2,t2
- more translatabe strings
- updated german translation

Oct 01, 2001: Jordi Mallach <jordi@sindominio.net>
- updated Spanish translation
- added some notes in BUGS

Sep 30, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- disabled write_quake_variables function for q3
- added ability to use custom configs for q3
- made some error popups translatable
- updated german translation

Sep 28, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- added Rune support
- changed layout of game configuration screen

Sep 28, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- added support for games using the gamespy protocol
- added q3,ut,sof,nolf,rally masters,turok2 and shogo masters
- made game names translatable
- updated german translation
- changed version to 0.9.7b

Sep 27, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- more translatable strings marked
- updated german translation

Sep 27, 2001: Jordi Mallach <jordi@sindominio.net>
- Updated Spanish translation
- added gettext cruft to po/.cvsignore

Sep 27, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- made q3_exec usable for Wofenstein, removed wo_exec
- identify q3/rtcw servers by their version string
- use common option struct for all games with q3 engine